# image-processing-exercises

./: .gitignore  README.md
01/: CMakeLists.txt  README.md
01/src/: main.cpp
02/: CMakeLists.txt  README.md  solution.md
02/src/: exercise_02a_thresh.cpp  exercise_02b_compare.cpp  exercise_02c_inf.cpp  exercise_02c_sup.cpp
03/: CMakeLists.txt  README.md
03/data/: .gitignore
03/src/: exercise_03a_erosion.cpp  exercise_03b_dilation.cpp
04/: CMakeLists.txt  README.md
04/src/: exercise_04a_opening.cpp  exercise_04b_closing.cpp  lib.cpp
05/: CMakeLists.txt  README.md
05/data/: closing_3_output1.pgm  opening_3_output1.pgm
06/: CMakeLists.txt  README.md
06/src/: exercise_06a_closing_opening.cpp  exercise_06a_opening_closing.cpp
07/: CMakeLists.txt  README.md
07/data/: closing_opening_3_output2.pgm  opening_closing_3_output1.pgm
08/: CMakeLists.txt  README.md  solution.md
09/: README.md  solution.md
11/: CMakeLists.txt  README.md
11/data/: .gitignore
11/src/: exercise_11a.cpp
12/: CMakeLists.txt  README.md
12/src/: exercise_12a.cpp
13ab/: CMakeLists.txt  README.md
13ab/src/: exercise_13a_minimum.cpp  exercise_13b.cpp  exercise_13b_maximum.cpp
13cd/: CMakeLists.txt  README.md
classification/color-clustering/: color_clustering.ipynb  requirements.txt
classification/histogram/: histogram.ipynb  requirements.txt
classification/keypoint-feature-extraction/: keypoint_feature_extraction.ipynb
classification/mammography/: Readme.md  automatic_annotation.ipynb
classification/yolo-v3/: Authors.txt  yolo_v3.ipynb
classification/yolo-v5/: yolo_v5.ipynb
include/: functions.cpp
segmentation/: CMakeLists.txt  README.md  authors.txt
segmentation/src/: s1a.cpp  s1b.cpp  s1c.cpp  s1d.cpp  s1e.cpp
